# axichat_draft

./: .gitignore  README.md  pyproject.toml
axichat/: config_abc.py  data_models.py  data_types.py  main.py  thinker.py  types.py
axichat/data/chats/: 2024-05-15_22-00-58.json  2024-05-15_22-17-17.json  2024-05-15_23-04-19.json  2024-05-16_17-40-26.json  2024-05-17_12-13-40.json  2024-05-17_12-50-03.json  2024-05-17_13-26-09.json  2024-05-17_13-29-32.json  2024-05-17_13-29-59.json  2024-05-17_13-33-43.json  2024-05-17_13-34-12.json  2024-05-17_13-34-50.json  2024-05-17_13-37-36.json  2024-05-17_13-39-37.json  2024-05-17_15-15-45.json  2024-05-17_15-16-58.json  2024-05-17_15-18-14.json  2024-05-17_15-22-52.json  2024-05-17_15-26-37.json  2024-05-17_15-30-09.json  2024-05-17_15-31-52.json  2024-05-17_15-33-18.json  2024-05-17_15-35-12.json  2024-05-17_15-36-23.json  2024-05-17_15-36-57.json  2024-05-17_16-05-16.json  2024-05-17_16-13-42.json  2024-05-17_16-15-53.json  2024-05-17_16-17-04.json  2024-05-17_16-19-11.json  2024-05-17_16-20-31.json  2024-05-17_16-23-18.json  2024-05-17_16-26-12.json  2024-05-17_16-35-03.json  2024-05-17_16-38-32.json  2024-05-17_16-40-28.json  2024-05-17_16-41-14.json  2024-05-17_16-44-44.json  2024-05-17_16-45-38.json  2024-05-17_17-04-47.json  (+1 more)
axichat/data/presets/: g4f_gpt-4o.json  main_deepseek.json
axichat/data/providers/: deepseek.json  gpt4free_openai.json
axichat/services/: __init__.py  chat.py  chat_client.py  chats.py  preset.py  presets.py  providers.py
axichat/ui/: events.py  main_frame.py  presets_dialog.py
