[project]
name = "axy-chat2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ruslan Iskov", email = "ruslan.rv.ua@gmail.com" }
]
dependencies = [
    "openai>=1.30.1",
    "msgspec>=0.18.6",
    "wxpython>=4.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/axy_chat2"]
